--- a/src/blocks/popup/__text/popup__text.css
+++ b/src/blocks/popup/__text/popup__text.css
@@ -1,3 +1,5 @@
+@import url("./_type/popup__text_type_res.css");
+
 .popup__text {
     font-family: "Inter", ‘Arial’, sans-serif;
     font-style: normal;
